@@ -38,6 +38,12 @@ Core and Builtins
 
 - Issue #8404: Fixed set operations on dictionary views.
 
+- Issue #8084: PEP 370 now conforms to system conventions for framework
+  builds on MacOS X. That is, "python setup.py install --user" will install
+  into "~/Library/Python/2.7" instead of "~/.local".
+
+
+
 Library
 -------
 
